--- a/GetADUsersWithGraph/App.config
+++ b/GetADUsersWithGraph/App.config
@@ -2,7 +2,7 @@
 <configuration>
   <appSettings>
     <!--SharePoint-->
-    <add key="TenantUrl" value="https://junointranet.sharepoint.com" />
+    <add key="TenantUrl" value="https://tenant.sharepoint.com" />
     <!--SharePoint-->
 
     <!--Graph-->
